// Copyright AGNTCY Contributors (https://github.com/agntcy)
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package moderator.proto.v1;

message ModeratorMessage {
  string message_id = 1;
  int64 timestamp = 2;
  oneof payload {
    CreateChannelRequest create_channel = 10;
    CreateChannelResponse create_channel_response = 11;
    AddParticipantRequest add_participant = 20;
    AddParticipantResponse add_participant_response = 21;
    RemoveParticipantRequest remove_participant = 30;
    RemoveParticipantResponse remove_participant_response = 31;
    DeleteChannelRequest delete_channel = 40;
    DeleteChannelResponse delete_channel_response = 41;
  }
}

message CreateChannelRequest {
  string channel_id = 1;
  repeated string moderators = 2;
  map<string, string> metadata = 3;
}

message CreateChannelResponse {
  bool success = 1;
  string error_message = 2;
  string channel_id = 3;
}

message AddParticipantRequest {
  string channel_id = 1;
  string participant_id = 2;
  map<string, string> metadata = 4;
}

message AddParticipantResponse {
  bool success = 1;
  string error_message = 2;
  string channel_id = 3;
  string participant_id = 4;
}

message RemoveParticipantRequest {
  string channel_id = 1;
  string participant_id = 2;
}

message RemoveParticipantResponse {
  bool success = 1;
  string error_message = 2;
  string channel_id = 3;
  string participant_id = 4;
}

message DeleteChannelRequest {
  string channel_id = 1;
}

message DeleteChannelResponse {
  bool success = 1;
  string error_message = 2;
  string channel_id = 3;
}
